fix too large hero logo (was killing responsiveness)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,8 +47,8 @@ p, section {
 }
 
 .hero-logo {
-  width: 50%;
-  max-width: 400px;
+  height: 35%;
+  max-height: 400px;
 }
 
 .btn-primary {
